--- a/templates/fragments/faction_data_config_tab.hbs
+++ b/templates/fragments/faction_data_config_tab.hbs
@@ -9,7 +9,7 @@
         name="factionName"
         placeholder="{{localize 'CHUD.faction.factionName.placeholder'}}"
         value="{{factionName}}"
-        {{#if hasSelectedFaction}}disabled{{/if}}
+        {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
       />
     </div>
     <p class="notes">{{localize "CHUD.faction.factionName.hint"}}</p>
@@ -28,7 +28,7 @@
             data-type="imagevideo"
             data-target="factionImg"
             title="{{localize 'CHUD.strings.browseFiles'}}"
-            {{#if hasSelectedFaction}}disabled{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
           >
             <i class="fas fa-file-import fa-fw"></i>
           </button>
@@ -39,7 +39,7 @@
             name="factionImg"
             placeholder="{{localize 'CHUD.strings.filePath'}}"
             value="{{factionLogo}}"
-            {{#if hasSelectedFaction}}disabled{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
           />
         </div>
         <p class="notes">{{localize "CHUD.faction.factionLogo.hint"}}</p>
@@ -53,7 +53,7 @@
             type="checkbox"
             name="displayFactionBanner"
             {{checked factionBannerEnabled}}
-            {{#if hasSelectedFaction}}disabled{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
           >
         </div>
         <p class="notes">{{localize "CHUD.faction.displayFactionBanner.hint"}}</p>
@@ -69,7 +69,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-1")}}active{{/if}}"
             type="button"
             name="shape-1"
-            {{#if hasSelectedFaction}}disabled{{/if}}  
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}  
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-1.hbs" color='#000000'}}
           </button>
@@ -79,7 +79,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-2")}}active{{/if}}"
             type="button"
             name="shape-2"
-            {{#if hasSelectedFaction}}disabled{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-2.hbs" color='#000000'}}
           </button>
@@ -89,7 +89,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-3")}}active{{/if}}"
             type="button"
             name="shape-3"
-            {{#if hasSelectedFaction}}disabled{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-3.hbs" color='#000000'}}
           </button>
@@ -99,7 +99,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-4")}}active{{/if}}"
             type="button"
             name="shape-4"
-            {{#if hasSelectedFaction}}disabled{{/if}}  
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}  
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-4.hbs" color='#000000'}}
           </button>
@@ -109,7 +109,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-5")}}active{{/if}}"
             type="button"
             name="shape-5"
-            {{#if hasSelectedFaction}}disabled{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-5.hbs" color='#000000'}}
           </button>
@@ -119,7 +119,7 @@
             class="banner-shape-button {{#if (eq factionBannerShape "shape-6")}}active{{/if}}"
             type="button"
             name="shape-6"
-            {{#if hasSelectedFaction}}disabled{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
           >
             {{> "modules/conversation-hud/templates/banner-shapes/shape-6.hbs" color='#000000'}}
           </button>
@@ -137,14 +137,14 @@
             type="text"
             name="factionTint"
             value="{{factionBannerTint}}"
-            {{#if hasSelectedFaction}}disabled{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
           />
           <input
             type="color"
             name="factionTintPicker"
             value="{{factionBannerTint}}"
             data-edit="factionTint"
-            {{#if hasSelectedFaction}}disabled{{/if}}
+            {{#if hasSelectedFaction}}tabindex="-1"{{/if}}
           />
         </div>
         <p class="notes">{{localize "CHUD.faction.factionBannerColor.hint"}}</p>
