--- a/templates/add_edit_participant.hbs
+++ b/templates/add_edit_participant.hbs
@@ -24,7 +24,7 @@
     <div class="tab" data-tab="faction-config">
       {{!-- Saved factions select --}}
       <div class="form-group">
-        <label>{{localize 'CHUD.faction.factionSelector.title'}}</label>
+        <label>{{localize 'CHUD.faction.factionSelector.name'}}</label>
         <div class="form-fields">
           <select name="selectedFaction">
             {{#select selectedFaction}}
