--- a/templates/add_edit_participant.hbs
+++ b/templates/add_edit_participant.hbs
@@ -1,6 +1,6 @@
 <form class="sheet participant-add-edit-form">
   {{!-- NAVIGATION TABS --}}
-  <nav class="sheet-tabs tabs" aria-role="{{localize 'SHEETS.FormNavLabel'}}">
+  <nav class="sheet-tabs tabs" aria-role="{{localize 'SHEETS.FormNavLabel'}}" style="flex: 0;">
     <a class="item" data-tab="participant-config">
       <i class="fas fa-user"></i> {{localize "CHUD.tabs.participantConfig"}}
     </a>
@@ -10,58 +10,64 @@
     </a>
   </nav>
 
-  {{!-- CONTENT --}}
-  <div>
-    {{!-- PARTICIPANT CONFIG TAB --}}
-    <div class="tab" data-tab="participant-config">
-      {{> "modules/conversation-hud/templates/fragments/participant_data_config_tab.hbs"
-        participantName=participantName
-        displayParticipantName=displayParticipantName
-        participantImg=participantImg
-        participantImgScale=participantImgScale
-      }}
-    </div>
+  {{!-- PARTICIPANT CONFIG TAB --}}
+  <div class="tab" data-tab="participant-config">
+    {{> "modules/conversation-hud/templates/fragments/participant_data_config_tab.hbs"
+      participantName=participantName
+      displayParticipantName=displayParticipantName
+      participantImg=participantImg
+      participantImgScale=participantImgScale
+    }}
+  </div>
 
-    {{!-- FACTION CONFIG TAB --}}
-    <div class="tab" data-tab="faction-config">
-      {{!-- Saved factions select --}}
-      <div class="form-group">
-        <label>{{localize 'CHUD.faction.factionSelector.name'}}</label>
-        <div class="form-fields">
-          <select name="selectedFaction">
-            {{#select selectedFaction}}
-              <option value="">New Faction</option>
-              {{#each savedFactions}}
-                <option value="{{ this.id }}">{{ this.name }}</option>
-              {{/each}}
-            {{/select}}
-          </select>
-        </div>
-        <p class="notes">{{localize "CHUD.faction.factionSelector.hint"}}</p>
+  {{!-- FACTION CONFIG TAB --}}
+  <div class="tab" data-tab="faction-config">
+    <div id="participant-add-edit-form-drag-and-drop-wrapper" class="drag-and-drop-wrapper">
+      <div id="participant-add-edit-form-dropzone" class="dropzone" >
+        <i class="far fa-square-plus"></i>
+        <p> {{localize 'CHUD.strings.dropFaction'}} </p>
       </div>
 
-      {{!-- Faction display toggle --}}
-      <div class="form-group">
-        <label>{{localize "CHUD.faction.displayFaction.name"}}</label>
-        <div class="form-fields">
-          <input type="checkbox" name="displayFaction" {{checked displayFaction}}>
+      <div class="faction-config-content">
+        {{!-- Saved factions select --}}
+        <div class="form-group">
+          <label>{{localize 'CHUD.faction.factionSelector.name'}}</label>
+          <div class="form-fields">
+            <select name="selectedFaction">
+              {{#select selectedFaction}}
+                <option value="">New Faction</option>
+                {{#each savedFactions}}
+                  <option value="{{ this.id }}">{{ this.name }}</option>
+                {{/each}}
+              {{/select}}
+            </select>
+          </div>
+          <p class="notes">{{localize "CHUD.faction.factionSelector.hint"}}</p>
         </div>
-        <p class="notes">{{localize "CHUD.faction.displayFaction.hint"}}</p>
+
+        {{!-- Faction display toggle --}}
+        <div class="form-group">
+          <label>{{localize "CHUD.faction.displayFaction.name"}}</label>
+          <div class="form-fields">
+            <input type="checkbox" name="displayFaction" {{checked displayFaction}}>
+          </div>
+          <p class="notes">{{localize "CHUD.faction.displayFaction.hint"}}</p>
+        </div>
+
+        <hr>
+
+        {{> "modules/conversation-hud/templates/fragments/faction_data_config_tab.hbs"
+          displayFaction=displayFaction
+          factionName=factionName
+          factionLogo=factionLogo
+          factionBannerEnabled=factionBannerEnabled
+          factionBannerShape=factionBannerShape
+          factionBannerTint=factionBannerTint
+          hasSelectedFaction=selectedFaction
+        }}
       </div>
-
-      <hr>
-
-      {{> "modules/conversation-hud/templates/fragments/faction_data_config_tab.hbs"
-        displayFaction=displayFaction
-        factionName=factionName
-        factionLogo=factionLogo
-        factionBannerEnabled=factionBannerEnabled
-        factionBannerShape=factionBannerShape
-        factionBannerTint=factionBannerTint
-        hasSelectedFaction=selectedFaction
-      }}
     </div>
- </div>
+  </div>
 
   {{!-- FOOTER --}}
   <footer class="sheet-footer flexrow">
